# example-xml-metadata-extraction

./: .gitignore  README.md  cli.sh  pyproject.toml  wikipedia-schema.xsd
example_xml_metadata_extraction/: analyzer.py  config.py  constants.py  database.py  logger.py  main.py
example_xml_metadata_extraction/lwe/config/profiles/default/: config.yaml
example_xml_metadata_extraction/lwe/config/profiles/default/presets/: gemini-2.5-flash.yaml  gpt-4.1-nano.yaml  llama-4-scout.yaml  ministral-8b.yaml  phi-4.yaml  qwen3-8b.yaml  voicemail-analysis-gemini-flash.yaml  voicemail-analysis-llama3.yaml
example_xml_metadata_extraction/lwe/config/profiles/default/templates/: example-analysis.md
example_xml_metadata_extraction/lwe/data/cache/: provider_chat_fireworks.yaml  provider_chat_google_genai.yaml  provider_openrouter.yaml
example_xml_metadata_extraction/lwe/data/profiles/default/: storage.db
presentation/: marp.config.js  package-lock.json  package.json  slide-talking-points.md  slides.html  slides.md
presentation/themes/: cluecon-zen.css
